--- a/js_client/sto_only.html
+++ b/js_client/sto_only.html
@@ -8,6 +8,7 @@
 
 
 <!-- <script src="/shared_libs/jquery-3.5.1.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.3/socket.io.js"></script>
 <script src="/jquery-3.5.1.min.js"></script>
 
 
@@ -18,8 +19,20 @@
 <script class="rld" src="/jsync_dep.js"></script>
 <script class="rld" src="/jsync_t1.js"></script>
 <script class="rld" src="/jsync_sto.js"></script>
-<script class="rld" src="/jsync_init.js"></script>
+<!-- <script class="rld" src="/jsync_init.js"></script> -->
 
+<!-- <script class="rld" src="/io_misc1.js"></script> -->
+<script class="rld" src="/jsync_io_demo.js"></script>
+
+
+
+<script class="rld" src="https://jfidev.com/ign/indx/jsyncdb/qflask/jsync_info.js"></script>
+
+<script class="rld" src="https://jfidev.com/ign/indx/jsyncdb/qflask/jsto0.js"></script>
+
+<script class="rld" src="https://jfidev.com/ign/indx/jsyncdb/qflask/jsr0.js"></script>
+<script class="rld" src="https://jfidev.com/ign/indx/jsyncdb/qflask/jsr1.js"></script>
+<script class="rld" src="https://jfidev.com/ign/indx/jsyncdb/qflask/jsr2.js"></script>
 
 
 
