reloadables will now be in the repo

--- a/js_client/sto_only.html
+++ b/js_client/sto_only.html
@@ -13,8 +13,14 @@
 
 
     <script src="https://rld.jfidev.com/ign/j7/rldjs/rldjs5.js?v=139"></script>
+    <!-- <script class="rld rrld" src="/rls.js?c=00x"></script> -->
+    <!-- <script class="rld rrld_u" src="/rls_u.js?c=c50fb605ecc3903a40c4b4e8a41ab12c"></script> -->
+    <script class="rld rrld" src="http://127.4.0.1/rls.js?c=00x"></script>
+    <script class="rld rrld_u" src="http://127.4.0.1/rls_u.js?c=c50fb605ecc3903a40c4b4e8a41ab12c"></script>
+    <!-- 
     <script class="rld rrld" src="https://rld.jfidev.com/ign/rls.js?c=00x"></script>
     <script class="rld rrld_u" src="https://rld.jfidev.com/ign/rls_u.js?c=c50fb605ecc3903a40c4b4e8a41ab12c"></script>
+     -->
 
 <script class="rld" src="/jsync_dep.js"></script>
 <script class="rld" src="/jsync_t1.js"></script>
@@ -26,13 +32,13 @@
 
 
 
-<script class="rld" src="https://jfidev.com/ign/indx/jsyncdb/qflask/jsync_info.js"></script>
+<script class="rld" src="/qflask/jsync_info.js"></script>
 
-<script class="rld" src="https://jfidev.com/ign/indx/jsyncdb/qflask/jsto0.js"></script>
+<script class="rld" src="/qflask/jsto0.js"></script>
 
-<script class="rld" src="https://jfidev.com/ign/indx/jsyncdb/qflask/jsr0.js"></script>
-<script class="rld" src="https://jfidev.com/ign/indx/jsyncdb/qflask/jsr1.js"></script>
-<script class="rld" src="https://jfidev.com/ign/indx/jsyncdb/qflask/jsr2.js"></script>
+<script class="rld" src="/qflask/jsr0.js"></script>
+<script class="rld" src="/qflask/jsr1.js"></script>
+<script class="rld" src="/qflask/jsr2.js"></script>
 
 
 
@@ -45,3 +51,5 @@
 
 </body>
 </html>
+
+
